set(SOURCES
		"OloEngine.h"
		"OloEnginePCH.cpp"
		"OloEnginePCH.h"

		"OloEngine/Animation/Skeleton.h"
		"OloEngine/Animation/AnimatedMeshComponents.h"
		"OloEngine/Animation/AnimationSystem.h"
		"OloEngine/Animation/AnimationSystem.cpp"
		"OloEngine/Animation/AnimationClip.h"
		"OloEngine/Animation/AnimationClip.cpp"
		"OloEngine/Animation/AnimationAsset.h"
		"OloEngine/Animation/AnimationAsset.cpp"
		"OloEngine/Animation/BoneEntityUtils.h"
		"OloEngine/Animation/BoneEntityUtils.cpp"
		
		"OloEngine/Asset/Asset.h"
		"OloEngine/Asset/AssetExtensions.h"
		"OloEngine/Asset/AssetExtensions.cpp"
		"OloEngine/Asset/AssetImporter.h"
		"OloEngine/Asset/AssetImporter.cpp"
		"OloEngine/Asset/AssetMetadata.h"
		"OloEngine/Asset/AssetRegistry.h"
		"OloEngine/Asset/AssetRegistry.cpp"
		"OloEngine/Asset/AssetTypes.h"
		"OloEngine/Asset/AssetManager.h"
		"OloEngine/Asset/AssetManager.cpp"
		"OloEngine/Asset/AssetManager/AssetManagerBase.h"
		"OloEngine/Asset/AssetManager/RuntimeAssetManager.h"
		"OloEngine/Asset/AssetManager/RuntimeAssetManager.cpp"
		"OloEngine/Asset/AssetManager/EditorAssetManager.h"
		"OloEngine/Asset/AssetManager/EditorAssetManager.cpp"
		"OloEngine/Asset/AssetSystem/EditorAssetSystem.h"
		"OloEngine/Asset/AssetSystem/EditorAssetSystem.cpp"
		"OloEngine/Asset/AssetSystem/RuntimeAssetSystem.h"
		"OloEngine/Asset/AssetSystem/RuntimeAssetSystem.cpp"
		"OloEngine/Asset/AssetSerializer.h"
		"OloEngine/Asset/AssetSerializer.cpp"
		"OloEngine/Asset/PlaceholderAsset.h"
		"OloEngine/Asset/PlaceholderAsset.cpp"
		"OloEngine/Asset/AssetPack.h"
		"OloEngine/Asset/AssetPack.cpp"
		"OloEngine/Asset/AssetPackBuilder.h"
		"OloEngine/Asset/AssetPackBuilder.cpp"
		"OloEngine/Asset/MeshColliderAsset.h"
		"OloEngine/Asset/SoundGraphAsset.h"
		"OloEngine/Asset/SoundGraphAsset.cpp"
		"OloEngine/Asset/Serializers/MaterialSerializer.h"
		"OloEngine/Asset/Serializers/MaterialSerializer.cpp"
		"OloEngine/Asset/Serializers/MeshSerializer.h"
		"OloEngine/Asset/Serializers/MeshSerializer.cpp"
		"OloEngine/Asset/Serializers/ShaderSerializer.h"
		"OloEngine/Asset/Serializers/ShaderSerializer.cpp"
		"OloEngine/Asset/Serializers/TextureSerializer.h"
		"OloEngine/Asset/Serializers/TextureSerializer.cpp"
		"OloEngine/Serialization/AssetPackFile.h"
		"OloEngine/Serialization/FileStream.h"
		"OloEngine/Serialization/FileStream.cpp"
		"OloEngine/Serialization/StreamReader.h"
		"OloEngine/Serialization/StreamReader.cpp"
		"OloEngine/Serialization/StreamWriter.h"
		"OloEngine/Serialization/StreamWriter.cpp"
		"OloEngine/Core/Events/EditorEvents.h"
		
		"OloEngine/Audio/AudioEngine.cpp"
		"OloEngine/Audio/AudioEngine.h"
		"OloEngine/Audio/AudioListener.cpp"
		"OloEngine/Audio/AudioListener.h"
		"OloEngine/Audio/AudioSource.cpp"
		"OloEngine/Audio/AudioSource.h"
		"OloEngine/Audio/AudioLoader.cpp"
		"OloEngine/Audio/AudioLoader.h"
		
		# SoundGraph Nodes
		"OloEngine/Audio/SoundGraph/Nodes/ArrayNodes.h"
		"OloEngine/Audio/SoundGraph/Nodes/EnvelopeNodes.h"
		"OloEngine/Audio/SoundGraph/Nodes/GeneratorNodes.h"
		"OloEngine/Audio/SoundGraph/Nodes/MathNodes.h"
		"OloEngine/Audio/SoundGraph/Nodes/MusicNodes.h"
		"OloEngine/Audio/SoundGraph/Nodes/NodeDescriptions.cpp"
		"OloEngine/Audio/SoundGraph/Nodes/NodeDescriptions.h"
		"OloEngine/Audio/SoundGraph/Nodes/NodeDescriptors.cpp"
		"OloEngine/Audio/SoundGraph/Nodes/NodeTypeImpls.h"
		"OloEngine/Audio/SoundGraph/Nodes/NodeTypes.cpp"
		"OloEngine/Audio/SoundGraph/Nodes/NodeTypes.h"
		"OloEngine/Audio/SoundGraph/Nodes/TriggerNodes.h"
		"OloEngine/Audio/SoundGraph/Nodes/WavePlayer.h"
		
		# SoundGraph Core
		"OloEngine/Audio/SoundGraph/CompilerCache.cpp"
		"OloEngine/Audio/SoundGraph/CompilerCache.h"
		"OloEngine/Audio/SoundGraph/GraphGeneration.cpp"
		"OloEngine/Audio/SoundGraph/GraphGeneration.h"
		"OloEngine/Audio/SoundGraph/NodeDescriptors.h"
		"OloEngine/Audio/SoundGraph/NodeProcessor.h"
		"OloEngine/Audio/SoundGraph/SoundGraph.cpp"
		"OloEngine/Audio/SoundGraph/SoundGraph.h"
		"OloEngine/Audio/SoundGraph/SoundGraphCache.cpp"
		"OloEngine/Audio/SoundGraph/SoundGraphCache.h"
		"OloEngine/Audio/SoundGraph/SoundGraphFactory.cpp"
		"OloEngine/Audio/SoundGraph/SoundGraphFactory.h"
		"OloEngine/Audio/SoundGraph/SoundGraphPatchPreset.cpp"
		"OloEngine/Audio/SoundGraph/SoundGraphPatchPreset.h"
		"OloEngine/Audio/SoundGraph/SoundGraphPlayer.cpp"
		"OloEngine/Audio/SoundGraph/SoundGraphPlayer.h"
		"OloEngine/Audio/SoundGraph/SoundGraphPrototype.cpp"
		"OloEngine/Audio/SoundGraph/SoundGraphPrototype.h"
		"OloEngine/Audio/SoundGraph/SoundGraphSerializer.cpp"
		"OloEngine/Audio/SoundGraph/SoundGraphSerializer.h"
		"OloEngine/Audio/SoundGraph/SoundGraphSound.cpp"
		"OloEngine/Audio/SoundGraph/SoundGraphSound.h"
		"OloEngine/Audio/SoundGraph/SoundGraphSource.cpp"
		"OloEngine/Audio/SoundGraph/SoundGraphSource.h"
		"OloEngine/Audio/SoundGraph/WaveSource.h"
		
		"OloEngine/Core/Application.cpp"
		"OloEngine/Core/Application.h"
		"OloEngine/Core/Assert.h"
		"OloEngine/Core/Base.h"
		"OloEngine/Core/Buffer.h"
		"OloEngine/Core/CriticalSection.h"
		"OloEngine/Core/EntryPoint.h"
		"OloEngine/Core/FileSystem.cpp"
		"OloEngine/Core/FileSystem.h"
		"OloEngine/Core/FilesystemUtils.h"
		"OloEngine/Core/Input.h"
		"OloEngine/Core/KeyCodes.h"
		"OloEngine/Core/Layer.cpp"
		"OloEngine/Core/Layer.h"
		"OloEngine/Core/LayerStack.cpp"
		"OloEngine/Core/LayerStack.h"
		"OloEngine/Core/Log.cpp"
		"OloEngine/Core/Log.h"
		"OloEngine/Core/MouseCodes.h"
		"OloEngine/Core/PlatformDetection.h"
		"OloEngine/Core/PlatformTLS.h"
		"OloEngine/Core/Ref.cpp"
		"OloEngine/Core/Ref.h"
		"OloEngine/Core/TaskTag.cpp"
		"OloEngine/Core/TaskTag.h"
		"OloEngine/Core/Timer.h"
		"OloEngine/Core/Timestep.h"
		"OloEngine/Core/UUID.cpp"
		"OloEngine/Core/UUID.h"
		"OloEngine/Core/Window.cpp"
		"OloEngine/Core/Window.h"
		"OloEngine/Core/Hash.cpp"
		"OloEngine/Core/Hash.h"
		"OloEngine/Core/Identifier.h"
		"OloEngine/Core/FastRandom.h"
		"OloEngine/Core/MonotonicTime.cpp"
		"OloEngine/Core/MonotonicTime.h"
		"OloEngine/Core/PlatformTime.h"

		"OloEngine/Debug/Instrumentor.h"
		"OloEngine/Debug/Profiler.h"
		"OloEngine/Debug/AllocationTracker.cpp"
		"OloEngine/Debug/AllocationTracker.h"

		"OloEngine/Events/ApplicationEvent.h"
		"OloEngine/Events/Event.cpp"
		"OloEngine/Events/Event.h"
		"OloEngine/Events/KeyEvent.h"
		"OloEngine/Events/MouseEvent.h"

		"OloEngine/ImGui/ImGuiBuild.cpp"
		"OloEngine/ImGui/ImGuiLayer.cpp"
		"OloEngine/ImGui/ImGuiLayer.h"

		"OloEngine/Math/Math.cpp"
		"OloEngine/Math/Math.h"
		"OloEngine/Math/GLMFormatter.h"

		"OloEngine/Algo/BinaryHeap.h"
		"OloEngine/Algo/BinarySearch.h"
		"OloEngine/Algo/Heapify.h"
		"OloEngine/Algo/HeapSort.h"
		"OloEngine/Algo/IntroSort.h"
		"OloEngine/Algo/IsHeap.h"
		"OloEngine/Algo/Reverse.h"
		"OloEngine/Algo/Rotate.h"
		"OloEngine/Algo/Sort.h"
		"OloEngine/Algo/StableSort.h"

		"OloEngine/Containers/Array.h"
		"OloEngine/Containers/ArrayView.h"
		"OloEngine/Containers/BitArray.h"
		"OloEngine/Containers/ClosableMpscQueue.h"
		"OloEngine/Containers/CompactHashTable.h"
		"OloEngine/Containers/CompactSet.h"
		"OloEngine/Containers/CompactSetBase.h"
		"OloEngine/Containers/ConsumeAllMpmcQueue.h"
		"OloEngine/Containers/ContainerAllocationPolicies.h"
		"OloEngine/Containers/ContainerFwd.h"
		"OloEngine/Containers/ContainersFwd.h"
		"OloEngine/Containers/Deque.h"
		"OloEngine/Containers/FAAArrayQueue.h"
		"OloEngine/Containers/HazardPointer.h"
		"OloEngine/Containers/IntrusiveLinkedList.h"
		"OloEngine/Containers/Map.h"
		"OloEngine/Containers/MpscQueue.h"
		"OloEngine/Containers/ReverseIterate.h"
		"OloEngine/Containers/Set.h"
		"OloEngine/Containers/SetElement.h"
		"OloEngine/Containers/SetUtilities.h"
		"OloEngine/Containers/SparseArray.h"
		"OloEngine/Containers/SparseSet.h"
		"OloEngine/Containers/SparseSetElement.h"
		"OloEngine/Containers/SpscQueue.h"
		"OloEngine/Containers/StaticArray.h"
		
		"OloEngine/Memory/AlignmentTemplates.h"
		"OloEngine/Memory/ArraySlackTracking.cpp"
		"OloEngine/Memory/ArraySlackTracking.h"
		"OloEngine/Memory/ConcurrentLinearAllocator.h"
		"OloEngine/Memory/FMemory.inl"
		"OloEngine/Memory/GenericPlatformMemory.cpp"
		"OloEngine/Memory/GenericPlatformMemory.h"
		"OloEngine/Memory/LockFreeFixedSizeAllocator.h"
		"OloEngine/Memory/LockFreeList.h"
		"OloEngine/Memory/LockFreeList.cpp"
		"OloEngine/Memory/MallocAnsi.cpp"
		"OloEngine/Memory/MallocAnsi.h"
		"OloEngine/Memory/Memory.h"
		"OloEngine/Memory/PlatformMallocCrash.cpp"
		"OloEngine/Memory/PlatformMallocCrash.h"
		"OloEngine/Memory/MemoryBase.h"
		"OloEngine/Memory/MemoryFwd.h"
		"OloEngine/Memory/MemoryOps.h"
		"OloEngine/Memory/MemoryView.h"
		"OloEngine/Memory/MemStack.cpp"
		"OloEngine/Memory/MemStack.h"
		"OloEngine/Memory/MemStackUtility.h"
		"OloEngine/Memory/NoopCounter.h"
		"OloEngine/Memory/PageAllocator.h"
		"OloEngine/Memory/Platform.h"
		"OloEngine/Memory/PlatformMemory.h"
		"OloEngine/Memory/TypeTraits.h"
		"OloEngine/Memory/UnrealMemory.cpp"
		"OloEngine/Memory/UnrealMemory.h"
		
		"OloEngine/Misc/EnumClassFlags.h"
		"OloEngine/Misc/Exec.cpp"
		"OloEngine/Misc/Exec.h"
		"OloEngine/Misc/IntrusiveUnsetOptionalState.h"
		"OloEngine/Misc/LazySingleton.h"
		
		"OloEngine/HAL/Event.cpp"
		"OloEngine/HAL/Event.h"
		"OloEngine/HAL/EventCount.h"
		"OloEngine/HAL/EventPool.h"
		"OloEngine/HAL/LowLevelMemTracker.cpp"
		"OloEngine/HAL/LowLevelMemTracker.h"
		"OloEngine/HAL/LowLevelMemTrackerDefines.h"
		"OloEngine/HAL/MallocPoisonProxy.h"
		"OloEngine/HAL/MallocPurgatoryProxy.h"
		"OloEngine/HAL/MallocVerifyProxy.h"
		"OloEngine/HAL/ManualResetEvent.cpp"
		"OloEngine/HAL/ManualResetEvent.h"
		"OloEngine/HAL/ParkingLot.cpp"
		"OloEngine/HAL/ParkingLot.h"
		"OloEngine/HAL/PlatformMisc.h"
		"OloEngine/HAL/PlatformProcess.h"
		"OloEngine/HAL/Runnable.h"
		"OloEngine/HAL/RunnableThread.h"
		"OloEngine/HAL/Semaphore.h"
		"OloEngine/HAL/Thread.h"
		"OloEngine/HAL/ThreadManager.h"
		"OloEngine/HAL/Windows/WindowsEvent.h"
		
		"OloEngine/Project/Project.cpp"
		"OloEngine/Project/Project.h"
		"OloEngine/Project/ProjectSerializer.cpp"
		"OloEngine/Project/ProjectSerializer.h"
		
		"OloEngine/Renderer/BoundingVolume.h"
		"OloEngine/Renderer/Buffer.h"
		"OloEngine/Renderer/Font.cpp"
		"OloEngine/Renderer/Font.h"
		"OloEngine/Renderer/Framebuffer.cpp"
		"OloEngine/Renderer/Framebuffer.h"
		"OloEngine/Renderer/Frustum.cpp"
		"OloEngine/Renderer/Frustum.h"
		"OloEngine/Renderer/GraphicsContext.cpp"
		"OloEngine/Renderer/GraphicsContext.h"
		"OloEngine/Renderer/IndexBuffer.cpp"
		"OloEngine/Renderer/IndexBuffer.h"
		"OloEngine/Renderer/Light.h"
		"OloEngine/Renderer/Material.cpp"
		"OloEngine/Renderer/Material.h"
		"OloEngine/Renderer/MaterialAsset.cpp"
		"OloEngine/Renderer/MaterialAsset.h"
		"OloEngine/Renderer/MaterialPresets.cpp"
		"OloEngine/Renderer/MaterialPresets.h"
		"OloEngine/Renderer/Mesh.cpp"
		"OloEngine/Renderer/Mesh.h"
		"OloEngine/Renderer/MeshSource.cpp"
		"OloEngine/Renderer/MeshSource.h"
		"OloEngine/Renderer/MeshPrimitives.cpp"
		"OloEngine/Renderer/MeshPrimitives.h"
		"OloEngine/Renderer/Model.cpp"
		"OloEngine/Renderer/Model.h"
		"OloEngine/Renderer/AnimatedModel.cpp"
		"OloEngine/Renderer/AnimatedModel.h"
		"OloEngine/Renderer/MSDFData.h"
		"OloEngine/Renderer/RenderCommand.cpp"
		"OloEngine/Renderer/RenderCommand.h"
		"OloEngine/Renderer/Renderer.cpp"
		"OloEngine/Renderer/Renderer.h"
		"OloEngine/Renderer/Renderer2D.cpp"
		"OloEngine/Renderer/Renderer2D.h"
		"OloEngine/Renderer/Renderer3D.cpp"
		"OloEngine/Renderer/Renderer3D.h"
		"OloEngine/Renderer/RendererAPI.cpp"
		"OloEngine/Renderer/RendererAPI.h"
		"OloEngine/Renderer/RenderGraph.cpp"
		"OloEngine/Renderer/RenderGraph.h"
		"OloEngine/Renderer/Shader.cpp"
		"OloEngine/Renderer/Shader.h"
		"OloEngine/Renderer/ShaderLibrary.cpp"
		"OloEngine/Renderer/ShaderLibrary.h"
		"OloEngine/Renderer/Texture.cpp"
		"OloEngine/Renderer/Texture.h"
		"OloEngine/Renderer/TextureCubemap.cpp"
		"OloEngine/Renderer/TextureCubemap.h"
		"OloEngine/Renderer/EnvironmentMap.cpp"
		"OloEngine/Renderer/EnvironmentMap.h"
		"OloEngine/Renderer/IBLPrecompute.cpp"
		"OloEngine/Renderer/GPUResourceQueue.cpp"
		"OloEngine/Renderer/GPUResourceQueue.h"
		"OloEngine/Renderer/IBLPrecompute.h"
		"OloEngine/Renderer/IBLCache.cpp"
		"OloEngine/Renderer/IBLCache.h"
		"OloEngine/Renderer/UniformBuffer.cpp"
		"OloEngine/Renderer/UniformBuffer.h"
		"OloEngine/Renderer/StorageBuffer.cpp"
		"OloEngine/Renderer/StorageBuffer.h"
		"OloEngine/Renderer/ComputeShader.cpp"
		"OloEngine/Renderer/ComputeShader.h"
		"OloEngine/Renderer/MemoryBarrierFlags.h"
		"OloEngine/Renderer/ShaderResourceRegistry.cpp"
		"OloEngine/Renderer/ShaderResourceRegistry.h"
		"OloEngine/Renderer/ShaderResourceTypes.h"
		"OloEngine/Renderer/ShaderBindingLayout.h"
		"OloEngine/Renderer/ShaderConstants.h"
		"OloEngine/Renderer/ShaderReflection.cpp"
		"OloEngine/Renderer/ShaderReflection.h"
		"OloEngine/Renderer/ShaderDebugUtils.cpp"
		"OloEngine/Renderer/ShaderDebugUtils.h"
		"OloEngine/Renderer/InflightFrameManager.cpp"
		"OloEngine/Renderer/InflightFrameManager.h"
		"OloEngine/Renderer/Vertex.h"
		"OloEngine/Renderer/VertexArray.cpp"
		"OloEngine/Renderer/VertexArray.h"		
		"OloEngine/Renderer/VertexBuffer.cpp"
		"OloEngine/Renderer/VertexBuffer.h"
		
		"OloEngine/Renderer/Camera/Camera.h"
		"OloEngine/Renderer/Camera/EditorCamera.cpp"
		"OloEngine/Renderer/Camera/EditorCamera.h"
		"OloEngine/Renderer/Camera/OrthographicCamera.cpp"
		"OloEngine/Renderer/Camera/OrthographicCamera.h"
		"OloEngine/Renderer/Camera/OrthographicCameraController.cpp"
		"OloEngine/Renderer/Camera/OrthographicCameraController.h"
		"OloEngine/Renderer/Camera/PerspectiveCamera.cpp"
		"OloEngine/Renderer/Camera/PerspectiveCamera.h"
		"OloEngine/Renderer/Camera/PerspectiveCameraController.cpp"
		"OloEngine/Renderer/Camera/PerspectiveCameraController.h"
		"OloEngine/Renderer/Debug/RenderGraphDebugger.h"
		"OloEngine/Renderer/Debug/RenderGraphDebugger.cpp"
		"OloEngine/Renderer/Debug/CapturedFrameData.h"
		"OloEngine/Renderer/Debug/CapturedFrameData.cpp"
		"OloEngine/Renderer/Debug/CommandPacketDebugger.h"
		"OloEngine/Renderer/Debug/CommandPacketDebugger.cpp"
		"OloEngine/Renderer/Debug/FrameCaptureManager.h"
		"OloEngine/Renderer/Debug/FrameCaptureManager.cpp"
		"OloEngine/Renderer/Debug/GPUTimerQueryPool.h"
		"OloEngine/Renderer/Debug/GPUTimerQueryPool.cpp"
		"OloEngine/Renderer/Debug/RendererMemoryTracker.h"
		"OloEngine/Renderer/Debug/RendererMemoryTracker.cpp"
		"OloEngine/Renderer/Debug/RendererProfiler.h"
		"OloEngine/Renderer/Debug/RendererProfiler.cpp"
		"OloEngine/Renderer/Debug/GPUResourceInspector.h"
		"OloEngine/Renderer/Debug/GPUResourceInspector.cpp"
		"OloEngine/Renderer/Debug/ShaderDebugger.h"
		"OloEngine/Renderer/Debug/ShaderDebugger.cpp"
		"OloEngine/Renderer/Debug/DebugUtils.h"
		"OloEngine/Renderer/Debug/DebugUtils.cpp"
		
		"OloEngine/Renderer/Passes/RenderPass.h"
		"OloEngine/Renderer/Passes/FinalRenderPass.h"
		"OloEngine/Renderer/Passes/FinalRenderPass.cpp"
		"OloEngine/Renderer/Passes/ParticleRenderPass.h"
		"OloEngine/Renderer/Passes/ParticleRenderPass.cpp"
		"OloEngine/Renderer/Passes/SceneRenderPass.h"
		"OloEngine/Renderer/Passes/SceneRenderPass.cpp"
		"OloEngine/Renderer/Passes/ShadowRenderPass.h"
		"OloEngine/Renderer/Passes/ShadowRenderPass.cpp"
		"OloEngine/Renderer/Passes/PostProcessRenderPass.h"
		"OloEngine/Renderer/Passes/PostProcessRenderPass.cpp"
		"OloEngine/Renderer/PostProcessSettings.h"
		"OloEngine/Renderer/Shadow/ShadowMap.h"
		"OloEngine/Renderer/Shadow/ShadowMap.cpp"
		"OloEngine/Renderer/Texture2DArray.h"
		"OloEngine/Renderer/Commands/CommandAllocator.cpp"
		"OloEngine/Renderer/Commands/CommandAllocator.h"
		"OloEngine/Renderer/Commands/CommandBucket.cpp"
		"OloEngine/Renderer/Commands/CommandBucket.h"
		"OloEngine/Renderer/Commands/CommandDispatch.cpp"
		"OloEngine/Renderer/Commands/CommandDispatch.h"
		"OloEngine/Renderer/Commands/CommandMemoryManager.cpp"
		"OloEngine/Renderer/Commands/CommandMemoryManager.h"
		"OloEngine/Renderer/Commands/CommandPacket.cpp"
		"OloEngine/Renderer/Commands/CommandPacket.h"
		"OloEngine/Renderer/Commands/DrawKey.h"
		"OloEngine/Renderer/Commands/FrameDataBuffer.cpp"
		"OloEngine/Renderer/Commands/FrameDataBuffer.h"
		"OloEngine/Renderer/Commands/RenderCommand.h"
		"OloEngine/Renderer/Commands/ThreadLocalCache.cpp"
		"OloEngine/Renderer/Commands/ThreadLocalCache.h"
		"OloEngine/Renderer/Commands/FrameResourceManager.cpp"
		"OloEngine/Renderer/Commands/FrameResourceManager.h"

		"OloEngine/Physics3D/Physics3DTypes.h"
		"OloEngine/Physics3D/SceneQueries.h"
		"OloEngine/Physics3D/PhysicsSettings.h"
		"OloEngine/Physics3D/Physics3DSystem.h"
		"OloEngine/Physics3D/Physics3DSystem.cpp"
		"OloEngine/Physics3D/JoltUtils.h"
		"OloEngine/Physics3D/JoltUtils.cpp"
		"OloEngine/Physics3D/JoltLayerInterface.h"
		"OloEngine/Physics3D/JoltLayerInterface.cpp"
		"OloEngine/Physics3D/PhysicsLayer.h"
		"OloEngine/Physics3D/PhysicsLayer.cpp"
		"OloEngine/Physics3D/JoltContactListener.h"
		"OloEngine/Physics3D/JoltContactListener.cpp"
		"OloEngine/Physics3D/JoltShapes.h"
		"OloEngine/Physics3D/JoltShapes.cpp"
		"OloEngine/Physics3D/JoltBody.h"
		"OloEngine/Physics3D/JoltBody.cpp"
		"OloEngine/Physics3D/JoltScene.h"
		"OloEngine/Physics3D/JoltScene.cpp"
		"OloEngine/Physics3D/EntityExclusionBodyFilter.h"
		"OloEngine/Physics3D/EntityExclusionBodyFilter.cpp"
		"OloEngine/Physics3D/EntityExclusionUtils.h"
		"OloEngine/Physics3D/EntityExclusionUtils.cpp"
		"OloEngine/Physics3D/JoltCharacterController.h"
		"OloEngine/Physics3D/JoltCharacterController.cpp"
		"OloEngine/Physics3D/JoltBinaryStream.h"
		"OloEngine/Physics3D/JoltBinaryStream.cpp"
		"OloEngine/Physics3D/MeshCookingFactory.h"
		"OloEngine/Physics3D/MeshCookingFactory.cpp"
		"OloEngine/Physics3D/MeshColliderCache.h"
		"OloEngine/Physics3D/MeshColliderCache.cpp"
		"OloEngine/Physics3D/JoltCaptureManager.h"
		"OloEngine/Physics3D/JoltCaptureManager.cpp"
		"OloEngine/Physics3D/JoltJobSystemAdapter.h"
		"OloEngine/Physics3D/JoltJobSystemAdapter.cpp"

		"OloEngine/Particle/ParticlePool.h"
		"OloEngine/Particle/ParticlePool.cpp"
		"OloEngine/Particle/EmissionShape.h"
		"OloEngine/Particle/EmissionShapeUtils.h"
		"OloEngine/Particle/ParticleEmitter.h"
		"OloEngine/Particle/ParticleEmitter.cpp"
		"OloEngine/Particle/ParticleCurve.h"
		"OloEngine/Particle/ParticleModules.h"
		"OloEngine/Particle/ParticleModules.cpp"
		"OloEngine/Particle/ParticleSystem.h"
		"OloEngine/Particle/ParticleSystem.cpp"
		"OloEngine/Particle/ParticleRenderer.h"
		"OloEngine/Particle/ParticleRenderer.cpp"
		"OloEngine/Particle/ParticleTrail.h"
		"OloEngine/Particle/ParticleTrail.cpp"
		"OloEngine/Particle/ParticleCollision.h"
		"OloEngine/Particle/ParticleCollision.cpp"
		"OloEngine/Particle/SubEmitter.h"
		"OloEngine/Particle/TrailRenderer.h"
		"OloEngine/Particle/TrailRenderer.cpp"
		"OloEngine/Particle/ParticleBatchRenderer.h"
		"OloEngine/Particle/ParticleBatchRenderer.cpp"
		"OloEngine/Particle/SimplexNoise.h"
		"OloEngine/Particle/SimplexNoise.cpp"
		"OloEngine/Particle/GPUParticleData.h"
		"OloEngine/Particle/GPUParticleSystem.h"
		"OloEngine/Particle/GPUParticleSystem.cpp"

		"OloEngine/Scene/Components.h"
		"OloEngine/Scene/Entity.cpp"
		"OloEngine/Scene/Entity.h"
		"OloEngine/Scene/Prefab.cpp"
		"OloEngine/Scene/Prefab.h"
		"OloEngine/Scene/Scene.cpp"
		"OloEngine/Scene/Scene.h"
		"OloEngine/Scene/SceneCamera.cpp"
		"OloEngine/Scene/SceneCamera.h"
		"OloEngine/Scene/SceneSerializer.cpp"
		"OloEngine/Scene/SceneSerializer.h"

		"OloEngine/Task/CancellationToken.h"
		"OloEngine/Task/ExtendedTaskPriority.h"
		"OloEngine/Task/InheritedContext.h"
		"OloEngine/Task/LocalQueue.h"
		"OloEngine/Task/LocalWorkQueue.h"
		"OloEngine/Task/LowLevelTask.h"
		"OloEngine/Task/NamedThreads.cpp"
		"OloEngine/Task/NamedThreads.h"
		"OloEngine/Task/Oversubscription.h"
		"OloEngine/Task/ParallelFor.cpp"
		"OloEngine/Task/ParallelFor.h"
		"OloEngine/Task/Pipe.h"
		"OloEngine/Task/Scheduler.cpp"
		"OloEngine/Task/Scheduler.h"
		"OloEngine/Task/SmallTaskAllocator.h"
		"OloEngine/Task/Task.cpp"
		"OloEngine/Task/Task.h"
		"OloEngine/Task/TaskConcurrencyLimiter.h"
		"OloEngine/Task/TaskDelegate.h"
		"OloEngine/Task/TaskPrivate.cpp"
		"OloEngine/Task/TaskPrivate.h"
		"OloEngine/Task/TaskShared.h"
		"OloEngine/Task/WaitingQueue.cpp"
		"OloEngine/Task/WaitingQueue.h"
		
		"OloEngine/Templates/Function.h"
		"OloEngine/Templates/FunctionRef.h"
		"OloEngine/Templates/IdentityFunctor.h"
		"OloEngine/Templates/IntegerSequence.h"
		"OloEngine/Templates/Invoke.h"
		"OloEngine/Templates/Projection.h"
		"OloEngine/Templates/RefCounting.cpp"
		"OloEngine/Templates/RefCounting.h"
		"OloEngine/Templates/RetainedRef.h"
		"OloEngine/Templates/ReversePredicate.h"
		"OloEngine/Templates/Sorting.h"
		"OloEngine/Templates/TypeHash.h"
		"OloEngine/Templates/UnrealTemplate.h"
		"OloEngine/Templates/UnrealTypeTraits.h"

		"OloEngine/Threading/ExternalMutex.h"
		"OloEngine/Threading/IntrusiveMutex.h"
		"OloEngine/Threading/IntrusiveUniqueLock.h"
		"OloEngine/Threading/LockTags.h"
		"OloEngine/Threading/Mutex.cpp"
		"OloEngine/Threading/Mutex.h"
		"OloEngine/Threading/RecursiveMutex.cpp"
		"OloEngine/Threading/RecursiveMutex.h"
		"OloEngine/Threading/RecursiveWordMutex.h"
		"OloEngine/Threading/SharedLock.h"
		"OloEngine/Threading/SharedMutex.h"
		"OloEngine/Threading/SharedRecursiveMutex.cpp"
		"OloEngine/Threading/SharedRecursiveMutex.h"
		"OloEngine/Threading/TransactionallySafeMutex.h"
		"OloEngine/Threading/UniqueLock.h"
		"OloEngine/Threading/WordMutex.h"

		"OloEngine/Scripting/C#/ScriptEngine.cpp"
		"OloEngine/Scripting/C#/ScriptEngine.h"
		"OloEngine/Scripting/C#/ScriptGlue.cpp"
		"OloEngine/Scripting/C#/ScriptGlue.h"
		"OloEngine/Scripting/C#/ScriptUtils.cpp"
		"OloEngine/Scripting/C#/ScriptUtils.h"
		"OloEngine/Scripting/Lua/LuaScriptEngine.cpp"
		"OloEngine/Scripting/Lua/LuaScriptEngine.h"
		"OloEngine/Scripting/Lua/LuaScriptGlue.cpp"
		"OloEngine/Scripting/Lua/LuaScriptGlue.h"

		"OloEngine/UI/UI.h"
		"OloEngine/UI/UILayoutSystem.h"
		"OloEngine/UI/UILayoutSystem.cpp"
		"OloEngine/UI/UIRenderer.h"
		"OloEngine/UI/UIRenderer.cpp"
		"OloEngine/UI/UIInputSystem.h"
		"OloEngine/UI/UIInputSystem.cpp"

		"OloEngine/Utils/PlatformUtils.h"

		"Platform/OpenGL/OpenGLContext.cpp"
		"Platform/OpenGL/OpenGLContext.h"
		"Platform/OpenGL/OpenGLDebug.cpp"
		"Platform/OpenGL/OpenGLDebug.h"
		"Platform/OpenGL/OpenGLFramebuffer.cpp"
		"Platform/OpenGL/OpenGLFramebuffer.h"
		"Platform/OpenGL/OpenGLIndexBuffer.cpp"
		"Platform/OpenGL/OpenGLIndexBuffer.h"
		"Platform/OpenGL/OpenGLRendererAPI.cpp"
		"Platform/OpenGL/OpenGLRendererAPI.h"
		"Platform/OpenGL/OpenGLShader.cpp"
		"Platform/OpenGL/OpenGLShader.h"
		"Platform/OpenGL/OpenGLTexture.cpp"
		"Platform/OpenGL/OpenGLTexture.h"
		"Platform/OpenGL/OpenGLTextureCubemap.cpp"
		"Platform/OpenGL/OpenGLTextureCubemap.h"
		"Platform/OpenGL/OpenGLTexture2DArray.cpp"
		"Platform/OpenGL/OpenGLTexture2DArray.h"
		"Platform/OpenGL/OpenGLUniformBuffer.cpp"
		"Platform/OpenGL/OpenGLUniformBuffer.h"
		"Platform/OpenGL/OpenGLStorageBuffer.cpp"
		"Platform/OpenGL/OpenGLStorageBuffer.h"
		"Platform/OpenGL/OpenGLComputeShader.cpp"
		"Platform/OpenGL/OpenGLComputeShader.h"
		"Platform/OpenGL/OpenGLUtilities.cpp"
		"Platform/OpenGL/OpenGLUtilities.h"
		"Platform/OpenGL/OpenGLVertexArray.cpp"
		"Platform/OpenGL/OpenGLVertexArray.h"
		"Platform/OpenGL/OpenGLVertexBuffer.cpp"
		"Platform/OpenGL/OpenGLVertexBuffer.h"
		"Platform/Windows/WindowsInput.cpp"
		"Platform/Windows/WindowsWindow.cpp"
		"Platform/Windows/WindowsWindow.h"
		"Platform/Windows/WindowsPlatformUtils.cpp"
)

add_library(OloEngine STATIC
		${SOURCES}
)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}
			FILES ${SOURCES}
)
